--- a/categorias/manuales.html
+++ b/categorias/manuales.html
@@ -62,7 +62,7 @@
 <body>
 
   <header class="header-animado">
-    <img src="../imagenes/logo.png" alt="Logo" class="logo" />
+    <img src="../imagenes/logo-ferreteria.png" alt="Logo" class="logo" />
     <div class="fondo-letras"></div>
   </header>
 
@@ -77,7 +77,7 @@
       <div class="herramienta"><img src="../imagenes/martillo.jpg" alt="Martillo"><h4>Martillo</h4></div>
       <div class="herramienta"><img src="../imagenes/destornillador.jpg" alt="Destornillador"><h4>Destornillador</h4></div>
       <div class="herramienta"><img src="../imagenes/llave.jpg" alt="Llave"><h4>Llave Ajustable</h4></div>
-      <div class="herramienta"><img src="../imagenes/tenaza.jpg" alt="Tenaza"><h4>Tenaza</h4></div>
+      <div class="herramienta"><img src="../imagenes/tenazas.jpg" alt="Tenaza"><h4>Tenaza</h4></div>
       <div class="herramienta"><img src="../imagenes/formon.jpg" alt="Formón"><h4>Formón</h4></div>
       <!-- Puedes agregar más herramientas aquí -->
     </div>
@@ -94,6 +94,8 @@
       });
     }
   </script>
-
+<div style="text-align: center; margin-top: 3rem;">
+  <a class="volver" href="../index.html">&#8592; Volver al inicio</a>
+</div>
 </body>
 </html>
