--- a/index.html
+++ b/index.html
@@ -21,51 +21,64 @@
   <button class="flecha izquierda" onclick="moverCarrusel(-1)">&#10094;</button>
 
   <div class="contenedor-categorias" id="contenedorCategorias">
-    <div class="categoria">
-      <img src="imagenes/manuales.jpg" alt="Manuales">
-      <h4>Manuales</h4>
-    </div>
-    <div class="categoria">
-      <img src="imagenes/electricas.jpg" alt="Eléctricas">
-      <h4>Eléctricas</h4>
-    </div>
-    <div class="categoria">
-      <img src="imagenes/medicion.jpg" alt="Medición">
-      <h4>Medición</h4>
-    </div>
-    <div class="categoria">
-      <img src="imagenes/utiles.jpg" alt="Útiles">
-      <h4>Útiles</h4>
-    </div>
-    <div class="categoria">
-      <img src="imagenes/seguridad.jpg" alt="Seguridad">
-      <h4>Seguridad</h4>
-    </div>
-    <div class="categoria">
-      <img src="imagenes/taller.jpg" alt="Taller">
-      <h4>Taller</h4>
-    </div>
-    <div class="categoria">
-      <img src="imagenes/sujecion.jpg" alt="Taller">
-      <h4>Sujecion</h4>
-    </div>
-    <div class="categoria">
-      <img src="imagenes/mantenimiento.jpg" alt="Taller">
-      <h4>Mantenimiento</h4>
-    </div>
-    <div class="categoria">
-      <img src="imagenes/industrial.jpg" alt="Taller">
-      <h4>Industrial</h4>
-    </div>
-    <div class="categoria">
-      <img src="imagenes/pintura.jpg" alt="Taller">
-      <h4>Pintura y Acabados</h4>
-    </div>
-    <div class="categoria">
-      <img src="imagenes/uso tecnico.jpg" alt="Taller">
-      <h4>Uso técnico</h4>
-    </div>
-  </div>
+
+  <a href="categorias/manuales.html" class="categoria">
+    <img src="imagenes/manuales.jpg" alt="Manuales" />
+    <h4>Manuales</h4>
+  </a>
+
+  <a href="categorias/electricas.html" class="categoria">
+    <img src="imagenes/electricas.jpg" alt="Eléctricas" />
+    <h4>Eléctricas</h4>
+  </a>
+
+  <a href="categorias/medicion.html" class="categoria">
+    <img src="imagenes/medicion.jpg" alt="Medición" />
+    <h4>Medición</h4>
+  </a>
+
+  <a href="categorias/utiles.html" class="categoria">
+    <img src="imagenes/utiles.jpg" alt="Útiles" />
+    <h4>Útiles</h4>
+  </a>
+
+  <a href="categorias/seguridad.html" class="categoria">
+    <img src="imagenes/seguridad.jpg" alt="Seguridad" />
+    <h4>Seguridad</h4>
+  </a>
+
+  <a href="categorias/taller.html" class="categoria">
+    <img src="imagenes/taller.jpg" alt="Taller" />
+    <h4>Taller</h4>
+  </a>
+
+  <a href="categorias/sujecion.html" class="categoria">
+    <img src="imagenes/sujecion.jpg" alt="Sujeción" />
+    <h4>Sujeción</h4>
+  </a>
+
+  <a href="categorias/mantenimiento.html" class="categoria">
+    <img src="imagenes/mantenimiento.jpg" alt="Mantenimiento" />
+    <h4>Mantenimiento</h4>
+  </a>
+
+  <a href="categorias/industrial.html" class="categoria">
+    <img src="imagenes/industrial.jpg" alt="Industrial" />
+    <h4>Industrial</h4>
+  </a>
+
+  <a href="categorias/pintura.html" class="categoria">
+    <img src="imagenes/pintura.jpg" alt="Pintura y Acabados" />
+    <h4>Pintura y Acabados</h4>
+  </a>
+
+  <a href="categorias/uso-tecnico.html" class="categoria">
+    <img src="imagenes/uso tecnico.jpg" alt="Uso técnico" />
+    <h4>Uso técnico</h4>
+  </a>
+
+</div>
+
 
   <button class="flecha derecha" onclick="moverCarrusel(1)">&#10095;</button>
 </div>
