MANUALES.HTML TERMINADO

--- a/herramientas/llaves.html
+++ b/herramientas/llaves.html
@@ -109,3 +109,13 @@
           <td>Llave de tubo (stillson) 14”</td>
           <td>$240 MXN</td>
           <td>$210 MX
+        tr>
+      </tbody>
+    </table>
+
+      <div style="text-align: center; margin-top: 3rem;">
+  <a class="volver" href="../index.html">&#8592; Volver al inicio</a>
+  <a class="volver" href="../categorias/manuales.html" style="margin-left: 1.5rem;">
+    &#8592; Volver a Herramientas Manuales
+  </a>
+</div>
