--- a/categorias/manuales.html
+++ b/categorias/manuales.html
@@ -106,19 +106,19 @@ a.volver {
     <img src="../imagenes/martillo.jpg" alt="Martillo">
     <h4>Martillo</h4>
   </a>
-  <a href="../herramientas/destornillador.html" class="herramienta">
+  <a href="../herramientas/destornilladores.html" class="herramienta">
     <img src="../imagenes/destornillador.jpg" alt="Destornillador">
     <h4>Destornillador</h4>
   </a>
-  <a href="../herramientas/llave.html" class="herramienta">
+  <a href="../herramientas/llaves.html" class="herramienta">
     <img src="../imagenes/llave.jpg" alt="Llave Ajustable">
     <h4>Llave Ajustable</h4>
   </a>
-  <a href="../herramientas/tenaza.html" class="herramienta">
+  <a href="../herramientas/tenazas.html" class="herramienta">
     <img src="../imagenes/tenazas.jpg" alt="Tenaza">
     <h4>Tenaza</h4>
   </a>
-  <a href="../herramientas/formon.html" class="herramienta">
+  <a href="../herramientas/formones.html" class="herramienta">
     <img src="../imagenes/formon.jpg" alt="Formón">
     <h4>Formón</h4>
   </a>
