--- a/categorias/manuales.html
+++ b/categorias/manuales.html
@@ -83,6 +83,20 @@ a.volver {
   color: #3498db;
   font-weight: bold;
   font-size: 1rem;
+
+  .herramienta img {
+  width: 100%;
+  height: 260px;
+  object-fit: cover;
+  border-radius: 8px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.herramienta:hover img {
+  transform: scale(1.05);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+}
+
 }
 
   </style>
