HERRAMIENTAS ELECTRICAS TERMINADO

--- a/categorias/electricas.html
+++ b/categorias/electricas.html
@@ -106,21 +106,9 @@ a.volver {
     <img src="../imagenes/amoladora.jpg" alt="Amoladora">
     <h4>Amoladora</h4>
   </a>
-  <a href="../herramientas/destornilladores.html" class="herramienta">
-    <img src="../imagenes/destornillador.jpg" alt="Destornillador">
-    <h4>Destornillador</h4>
-  </a>
-  <a href="../herramientas/llaves.html" class="herramienta">
-    <img src="../imagenes/llave.jpg" alt="Llave Ajustable">
-    <h4>Llave Ajustable</h4>
-  </a>
-  <a href="../herramientas/tenazas.html" class="herramienta">
-    <img src="../imagenes/tenazas.jpg" alt="Tenaza">
-    <h4>Tenaza</h4>
-  </a>
-  <a href="../herramientas/formones.html" class="herramienta">
-    <img src="../imagenes/formon.jpg" alt="Formón">
-    <h4>Formón</h4>
+  <a href="../herramientas/taladros.html" class="herramienta">
+    <img src="../imagenes/taladro.jpg" alt="Taladros">
+    <h4>Taladros</h4>
   </a>
 </div>
 
