cinta-metrica.html

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
     <h4>Uso técnico</h4>
   </a>
 
+  <a href="categorias/uso-tecnico.html" class="categoria">
+    <img src="imagenes/uso tecnico.jpg" alt="Uso técnico" />
+    <h4>Uso técnico</h4>
+  </a>
+
 </div>
 
 
