--- a/categorias/medicion.html
+++ b/categorias/medicion.html
@@ -106,9 +106,9 @@ a.volver {
     <img src="../imagenes/cintametrica.jpg" alt="Amoladora">
     <h4>Cinta Metrica</h4>
   </a>
-  <a href="../herramientas/taladros.html" class="herramienta">
-    <img src="../imagenes/taladro.jpg" alt="Taladros">
-    <h4>Taladros</h4>
+  <a href="../herramientas/escuadras.html" class="herramienta">
+    <img src="../imagenes/escuadras.jpg" alt="Escuadra">
+    <h4>Escuadras</h4>
   </a>
 </div>
 
