--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
         <img src="imagenes/amoladora.jpg" alt="Amoladora" />
         <h3>Amoladoras</h3>
     </a>
+    <a href="herramientas/cintas-metricas.html" class="producto">
+        <img src="imagenes/cintametrica.jpg" alt="Cintas-metricas" />
+        <h3>Cinta Metrica</h3>
+    </a>
     </div>
   </section>
 
