--- a/herramientas/escuadras.html
+++ b/herramientas/escuadras.html
@@ -68,7 +68,7 @@
   </header>
 
   <div class="contenedor">
-    <h2>Escuadras Es Disponibles</h2>
+    <h2>Escuadras Disponibles</h2>
 
     <table>
       <thead>
