--- a/categorias/electricas.html
+++ b/categorias/electricas.html
@@ -98,7 +98,7 @@ a.volver {
     <h2>Herramientas Electricas</h2>
 
     <div class="buscador">
-      <input type="text" id="buscar" placeholder="Buscar herramienta..." onkeyup="filtrarHerramientas()" />
+      <input type="text" id="buscar" placeholder="Buscar herramienta electrica..." onkeyup="filtrarHerramientas()" />
     </div>
 
     <div class="lista-herramientas" id="listaHerramientas">
