--- a/categorias/manuales.html
+++ b/categorias/manuales.html
@@ -112,7 +112,7 @@ a.volver {
     <h2>Herramientas Manuales</h2>
 
     <div class="buscador">
-      <input type="text" id="buscar" placeholder="Buscar herramienta..." onkeyup="filtrarHerramientas()" />
+      <input type="text" id="buscar" placeholder="Buscar herramienta manual..." onkeyup="filtrarHerramientas()" />
     </div>
 
     <div class="lista-herramientas" id="listaHerramientas">
