--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
         <img src="imagenes/cintametrica.jpg" alt="Cintas-metricas" />
         <h3>Cinta Metrica</h3>
     </a>
+    <a href="herramientas/escuadras.html" class="producto">
+        <img src="imagenes/escuadras.jpg" alt="Escuadras" />
+        <h3>Escuadras</h3>
+    </a>
     </div>
   </section>
 
