eliminacion herramienta carrusel dupplicada

--- a/index.html
+++ b/index.html
@@ -76,12 +76,7 @@
     <img src="imagenes/uso tecnico.jpg" alt="Uso técnico" />
     <h4>Uso técnico</h4>
   </a>
-
-  <a href="categorias/uso-tecnico.html" class="categoria">
-    <img src="imagenes/uso tecnico.jpg" alt="Uso técnico" />
-    <h4>Uso técnico</h4>
-  </a>
-
+  
 </div>
 
 
@@ -137,6 +132,10 @@
     <a href="herramientas/escuadras.html" class="producto">
         <img src="imagenes/escuadras.jpg" alt="Escuadras" />
         <h3>Escuadras</h3>
+    </a>
+    <a href="herramientas/cuter.html" class="producto">
+        <img src="imagenes/cuter.jpg" alt="cuter" />
+        <h3>Cúter / navaja retráctil</h3>
     </a>
     </div>
   </section>
