Agregué gafas.html

--- a/categorias/seguridad.html
+++ b/categorias/seguridad.html
@@ -104,11 +104,11 @@ a.volver {
     <div class="lista-herramientas" id="listaHerramientas">
   <a href="../herramientas/casco.html" class="herramienta">
     <img src="../imagenes/casco.jpg" alt="Casco">
-    <h4>Amoladora</h4>
+    <h4>Cascos</h4>
   </a>
   <a href="../herramientas/gafas.html" class="herramienta">
     <img src="../imagenes/gafas.jpg" alt="Taladros">
-    <h4>Taladros</h4>
+    <h4>Gafas</h4>
   </a>
 </div>
 
