--- a/herramientas/gafas.html
+++ b/herramientas/gafas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cascos | Ferretería Central</title>
+  <title>Gafas | Ferretería Central</title>
   <link rel="stylesheet" href="../estilos.css" />
   <style>
     body {
@@ -79,7 +79,7 @@
   </header>
 
   <div class="contenedor">
-    <h2>Cascos Disponibles</h2>
+    <h2>Gafas Disponibles</h2>
 
     <table>
       <thead>
@@ -91,29 +91,29 @@
       </thead>
       <tbody>
         <tr>
-          <td>Casco de seguridad tipo construcción</td>
-          <td>$110 MXN</td>
-          <td>$90 MXN</td>
+          <td>Gafas de seguridad básicas</td>
+          <td>$40 MXN</td>
+          <td>$30 MXN</td>
         </tr>
         <tr>
-          <td>Casco dieléctrico (hasta 20,000V)</t></td>
-          <td>$180 MXN</td>
-          <td>$150 MXN</td>
+          <td>Gafas de policarbonato antirrayaduras</t></td>
+          <td>$65 MXN</td>
+          <td>$52 MXN</td>
         </tr>
         <tr>
-          <td>Casco con barboquejo de 4 puntos</td>
+          <td>Gafas con protección UV</td>
           <td>	$130 MXN</td>
           <td>	$110 MXN</td>
         </tr>
         <tr>
-          <td>Casco con visera integrada </td>
+          <td>Gafas ventiladas contra empañamiento</td>
           <td>$210  MXN</td>
           <td>$180  MXN</td>
         </tr>
         <tr>
-          <td>Casco ajustable tipo americano</td>
-          <td>$95 MXN</td>
-          <td>$78  MXN</td>
+          <td>Gafas con ajuste de patillas</td>
+          <td>$65 MXN</td>
+          <td>$48  MXN</td>
         </tr>
       </tbody>
     </table>
