--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
         <img src="imagenes/cuter.jpg" alt="cuter" />
         <h3>Cúter / navaja retráctil</h3>
     </a>
+    <a href="herramientas/casco.html" class="producto">
+        <img src="imagenes/casco.jpg" alt="casco" />
+        <h3>Cascos de seguridad</h3>
+    </a>
+    <a href="herramientas/gafas.html" class="producto">
+        <img src="imagenes/gafas.jpg" alt="Gafas" />
+        <h3>Gafas de seguridad</h3>
+    </a>
     </div>
   </section>
 
