--- a/categorias/taller.html
+++ b/categorias/taller.html
@@ -106,9 +106,9 @@ a.volver {
     <img src="../imagenes/gato.jpg" alt="Gato">
     <h4>Gato hidraulico</h4>
   </a>
-  <a href="../herramientas/gafas.html" class="herramienta">
-    <img src="../imagenes/gafas.jpg" alt="Taladros">
-    <h4>Gafas</h4>
+  <a href="../herramientas/compresor.html" class="herramienta">
+    <img src="../imagenes/compresor.jpg" alt="Compresor">
+    <h4>Compresor de aire</h4>
   </a>
 </div>
 
