--- a/index.html
+++ b/index.html
@@ -145,6 +145,14 @@
         <img src="imagenes/gafas.jpg" alt="Gafas" />
         <h3>Gafas de seguridad</h3>
     </a>
+    <a href="herramientas/gato.html" class="producto">
+        <img src="imagenes/gato.jpg" alt="Gato" />
+        <h3>Gato hidraulico</h3>
+    </a>
+    <a href="herramientas/compresor.html" class="producto">
+        <img src="imagenes/compresor.jpg" alt="Compresor" />
+        <h3>Compresor de aire</h3>
+    </a>
     </div>
   </section>
 
