--- a/categorias/utiles.html
+++ b/categorias/utiles.html
@@ -139,7 +139,7 @@ a.volver {
 </script>
 
 
-<div style="text-align: center; margin-top: 3rem;">
+<div style="text-align: center; margin-top: 3rem; margin-bottom: 3rem;">
   <a class="volver" href="../index.html">&#8592; Volver al inicio</a>
 </div>
 
