--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
         <img src="imagenes/compresor.jpg" alt="Compresor" />
         <h3>Compresor de aire</h3>
     </a>
+    <a href="herramientas/prensa.html" class="producto">
+        <img src="imagenes/prensa.jpg" alt="Prensa" />
+        <h3>Prensa</h3>
+    </a>
     </div>
   </section>
 
