--- a/categorias/sujecion.html
+++ b/categorias/sujecion.html
@@ -104,7 +104,7 @@ a.volver {
     <div class="lista-herramientas" id="listaHerramientas">
   <a href="../herramientas/prensa.html" class="herramienta">
     <img src="../imagenes/prensa.jpg" alt="prensa">
-    <h4>Prensa C2</h4>
+    <h4>Prensas</h4>
   </a>
   
 </div>
