--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
         <img src="imagenes/prensa.jpg" alt="Prensa" />
         <h3>Prensa</h3>
     </a>
+    <a href="herramientas/pinzapresion.html" class="producto">
+        <img src="imagenes/pinzapresion.jpg" alt="pinzapresion" />
+        <h3>Pinza de Presion</h3>
+    </a>
     </div>
   </section>
 
