--- a/categorias/sujecion.html
+++ b/categorias/sujecion.html
@@ -106,6 +106,11 @@ a.volver {
     <img src="../imagenes/prensa.jpg" alt="prensa">
     <h4>Prensas</h4>
   </a>
+
+  <a href="../herramientas/pinzapresion.html" class="herramienta">
+    <img src="../imagenes/pinzapresion.jpg" alt="pinzapresion">
+    <h4>Pinza de Presion</h4>
+  </a>
   
 </div>
 
