cepillo de alambre.html

--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
         <img src="imagenes/pinzapresion.jpg" alt="pinzapresion" />
         <h3>Pinza de Presion</h3>
     </a>
+    <a href="herramientas/cepilloalambre.html" class="producto">
+        <img src="imagenes/cepilloalambre.JPG" alt="cepilloalambre" />
+        <h3>Cepillo de Alambre</h3>
+    </a>
     </div>
   </section>
 
