cepillo de alambre.html

--- a/categorias/mantenimiento.html
+++ b/categorias/mantenimiento.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Herramientas Electricas | Ferretería Central</title>
+  <title>Herramientas de Mantenimiento | Ferretería Central</title>
   <link rel="stylesheet" href="../estilos.css" />
   <style>
     .contenedor {
@@ -95,10 +95,10 @@ a.volver {
   </header>
 
   <div class="contenedor">
-    <h2>Herramientas de Seguridad</h2>
+    <h2>Herramientas de Mantenimiento</h2>
 
     <div class="buscador">
-      <input type="text" id="buscar" placeholder="Buscar herramienta de Seguridad..." onkeyup="filtrarHerramientas()" />
+      <input type="text" id="buscar" placeholder="Buscar herramienta de Mantenimiento..." onkeyup="filtrarHerramientas()" />
     </div>
 
     <div class="lista-herramientas" id="listaHerramientas">
