pistola de grasa.html

--- a/categorias/mantenimiento.html
+++ b/categorias/mantenimiento.html
@@ -106,9 +106,9 @@ a.volver {
     <img src="../imagenes/cepilloalambre.JPG" alt="cepilloalambre">
     <h4>Cepillo de Alambre</h4>
   </a>
-  <a href="../herramientas/gafas.html" class="herramienta">
-    <img src="../imagenes/gafas.jpg" alt="Taladros">
-    <h4>Gafas</h4>
+  <a href="../herramientas/pistolagrasa.html" class="herramienta">
+    <img src="../imagenes/pistolagrasa.jpg" alt="pistolagrasa">
+    <h4>Pistola de Grasa</h4>
   </a>
 </div>
 
