pistola de grasa.html

--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
         <img src="imagenes/cepilloalambre.JPG" alt="cepilloalambre" />
         <h3>Cepillo de Alambre</h3>
     </a>
+    <a href="herramientas/pistolagrasa.html" class="producto">
+        <img src="imagenes/pistolagrasa.jpg" alt="pistolagrasa" />
+        <h3>Pistola de Grasa</h3>
+    </a>
     </div>
   </section>
 
