detalles cierra circular.html

--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
         <img src="imagenes/pistolagrasa.jpg" alt="pistolagrasa" />
         <h3>Pistola de Grasa</h3>
     </a>
+    <a href="herramientas/sierracircular.html" class="producto">
+        <img src="imagenes/sierracircular.jpg" alt="sierracircular" />
+        <h3>Sierra circular</h3>
+    </a>
     </div>
   </section>
 
