--- a/categorias/industrial.html
+++ b/categorias/industrial.html
@@ -95,7 +95,7 @@ a.volver {
   </header>
 
   <div class="contenedor">
-    <h2>Herramientas de Taller</h2>
+    <h2>Herramientas Industrial</h2>
 
     <div class="buscador">
       <input type="text" id="buscar" placeholder="Buscar herramienta Industrial..." onkeyup="filtrarHerramientas()" />
