amoladora de banco.html

--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
         <img src="imagenes/sierracircular.jpg" alt="sierracircular" />
         <h3>Sierra circular</h3>
     </a>
+    <a href="herramientas/amoladorabanco.html" class="producto">
+        <img src="imagenes/amoladorabanco.jpg" alt=amoladorabanco" />
+        <h3>Amoladora de banco</h3>
+    </a>
     </div>
   </section>
 
