--- a/categorias/industrial.html
+++ b/categorias/industrial.html
@@ -104,7 +104,7 @@ a.volver {
     <div class="lista-herramientas" id="listaHerramientas">
   <a href="../herramientas/sierracircular.html" class="herramienta">
     <img src="../imagenes/sierracircular.jpg" alt="sierracircular">
-    <h4>sierra circular</h4>
+    <h4>Sierra circular</h4>
   </a>
   <a href="../herramientas/compresor.html" class="herramienta">
     <img src="../imagenes/compresor.jpg" alt="Compresor">
