--- a/categorias/industrial.html
+++ b/categorias/industrial.html
@@ -106,9 +106,9 @@ a.volver {
     <img src="../imagenes/sierracircular.jpg" alt="sierracircular">
     <h4>Sierra circular</h4>
   </a>
-  <a href="../herramientas/compresor.html" class="herramienta">
-    <img src="../imagenes/compresor.jpg" alt="Compresor">
-    <h4>Compresor de aire</h4>
+  <a href="../herramientas/amoladorabanco.html" class="herramienta">
+    <img src="../imagenes/amoladorabanco.jpg" alt="amoladorabanco">
+    <h4>Amoladora de banco</h4>
   </a>
 </div>
 
