--- a/index.html
+++ b/index.html
@@ -174,8 +174,12 @@
         <h3>Sierra circular</h3>
     </a>
     <a href="herramientas/amoladorabanco.html" class="producto">
-        <img src="imagenes/amoladorabanco.jpg" alt=amoladorabanco" />
+        <img src="imagenes/amoladorabanco.jpg" alt="amoladorabanco" />
         <h3>Amoladora de banco</h3>
+    </a>
+    <a href="herramientas/brochas.html" class="producto">
+        <img src="imagenes/brochas.jpg" alt="brochas" />
+        <h3>Brochas</h3>
     </a>
     </div>
   </section>
