--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
         <img src="imagenes/brochas.jpg" alt="brochas" />
         <h3>Brochas</h3>
     </a>
+    <a href="herramientas/pistolapintar.html" class="producto">
+        <img src="imagenes/pistolapintar.jpg" alt="pistolapintar" />
+        <h3>Pistola para pintar</h3>
+    </a>
     </div>
   </section>
 
