--- a/categorias/pintura.html
+++ b/categorias/pintura.html
@@ -102,13 +102,13 @@ a.volver {
     </div>
 
     <div class="lista-herramientas" id="listaHerramientas">
-  <a href="../herramientas/cintas-metricas.html" class="herramienta">
-    <img src="../imagenes/cintametrica.jpg" alt="Amoladora">
-    <h4>Cinta Metrica</h4>
+  <a href="../herramientas/brochas.html" class="herramienta">
+    <img src="../imagenes/brochas.jpg" alt="brochas">
+    <h4>Brochas</h4>
   </a>
-  <a href="../herramientas/escuadras.html" class="herramienta">
-    <img src="../imagenes/escuadras.jpg" alt="Escuadra">
-    <h4>Escuadras</h4>
+  <a href="../herramientas/pistolapintar.html" class="herramienta">
+    <img src="../imagenes/pistolapintar.jpg" alt="pistolapintar">
+    <h4>Pistola para Pintar</h4>
   </a>
 </div>
 
