--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
         <img src="imagenes/pistolapintar.jpg" alt="pistolapintar" />
         <h3>Pistola para pintar</h3>
     </a>
+    <a href="herramientas/testervoltaje.html" class="producto">
+        <img src="imagenes/testervoltaje.jpg" alt="testervoltaje" />
+        <h3>Tester de Voltaje</h3>
+    </a>
     </div>
   </section>
 
