--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h4>Pintura y Acabados</h4>
   </a>
 
-  <a href="categorias/uso-tecnico.html" class="categoria">
+  <a href="categorias/usotecnico.html" class="categoria">
     <img src="imagenes/uso tecnico.jpg" alt="Uso técnico" />
     <h4>Uso técnico</h4>
   </a>
