--- a/categorias/usotecnico.html
+++ b/categorias/usotecnico.html
@@ -106,9 +106,9 @@ a.volver {
     <img src="../imagenes/testervoltaje.jpg" alt="testervoltaje">
     <h4>Tester de Voltaje</h4>
   </a>
-  <a href="../herramientas/pistolapintar.html" class="herramienta">
-    <img src="../imagenes/pistolapintar.jpg" alt="pistolapintar">
-    <h4>Pistola para Pintar</h4>
+  <a href="../herramientas/medidordistancia.html" class="herramienta">
+    <img src="../imagenes/medidordistancia.jpg" alt="medidordistancia">
+    <h4>Medidor de Distancia</h4>
   </a>
 </div>
 
