--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
         <img src="imagenes/testervoltaje.jpg" alt="testervoltaje" />
         <h3>Tester de Voltaje</h3>
     </a>
+    <a href="herramientas/medidordistancia.html" class="producto">
+        <img src="imagenes/medidordistancia.jpg" alt="medidordistancia" />
+        <h3>Medidor de Distancia</h3>
+    </a>
     </div>
   </section>
 
