--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
         <img src="imagenes/medidordistancia.jpg" alt="medidordistancia" />
         <h3>Medidor de Distancia</h3>
     </a>
+    <a href="herramientas/comprobadorlan.html" class="producto">
+        <img src="imagenes/comprobadorLAN.jpg" alt="comprobadorLAN" />
+        <h3>comprobador de Cables LAN</h3>
+    </a>
     </div>
   </section>
 
