--- a/categorias/usotecnico.html
+++ b/categorias/usotecnico.html
@@ -110,6 +110,10 @@ a.volver {
     <img src="../imagenes/medidordistancia.jpg" alt="medidordistancia">
     <h4>Medidor de Distancia</h4>
   </a>
+  <a href="../herramientas/comprobadorlan.html" class="herramienta">
+    <img src="../imagenes/comprobadorLAN.jpg" alt="comprobadorLAN">
+    <h4>Comprobador de Cables LAN</h4>
+  </a>
 </div>
 
   </div>
