--- a/categorias/pintura.html
+++ b/categorias/pintura.html
@@ -110,6 +110,10 @@ a.volver {
     <img src="../imagenes/pistolapintar.jpg" alt="pistolapintar">
     <h4>Pistola para Pintar</h4>
   </a>
+  <a href="../herramientas/sellador.html" class="herramienta">
+    <img src="../imagenes/sellador.jpg" alt="Sellador">
+    <h4>Sellador</h4>
+  </a>
 </div>
 
   </div>
