--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
         <img src="imagenes/comprobadorLAN.jpg" alt="comprobadorLAN" />
         <h3>comprobador de Cables LAN</h3>
     </a>
+    <a href="herramientas/sellador.html" class="producto">
+        <img src="imagenes/sellador.jpg" alt="Sellador" />
+        <h3>Sellador</h3>
+    </a>
     </div>
   </section>
 
