--- a/categorias/utiles.html
+++ b/categorias/utiles.html
@@ -106,6 +106,10 @@ a.volver {
     <img src="../imagenes/cuter.jpg" alt="cuter">
     <h4>Cúter / navaja retráctil</h4>
   </a>
+  <a href="../herramientas/cinta.html" class="herramienta">
+    <img src="../imagenes/cinta.jpg" alt="cinta">
+    <h4>Cinta</h4>
+  </a>
   
 </div>
 
