--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
         <img src="imagenes/sellador.jpg" alt="Sellador" />
         <h3>Sellador</h3>
     </a>
+    <a href="herramientas/cinta.html" class="producto">
+        <img src="imagenes/cinta.jpg" alt="cinta" />
+        <h3>Cinta</h3>
+    </a>
     </div>
   </section>
 
