--- a/categorias/manuales.html
+++ b/categorias/manuales.html
@@ -136,6 +136,10 @@ a.volver {
     <img src="../imagenes/formon.jpg" alt="Formón">
     <h4>Formón</h4>
   </a>
+  <a href="../herramientas/sierras.html" class="herramienta">
+    <img src="../imagenes/sierra.jpg" alt="sierra">
+    <h4>sierra</h4>
+  </a>
 </div>
 
   </div>
