--- a/herramientas/sierras.html
+++ b/herramientas/sierras.html
@@ -118,7 +118,13 @@
       </tbody>
     </table>
 
-    <a class="volver" href="../index.html">&#8592; Volver al inicio</a>
+
+    <div style="text-align: center; margin-top: 3rem;">
+  <a class="volver" href="../index.html">&#8592; Volver al inicio</a>
+  <a class="volver" href="../categorias/manuales.html" style="margin-left: 1.5rem;">
+    &#8592; Volver a Herramientas Manuales
+  </a>
+</div>
   </div>
 
 </body>
