--- a/categorias/manuales.html
+++ b/categorias/manuales.html
@@ -138,7 +138,7 @@ a.volver {
   </a>
   <a href="../herramientas/sierras.html" class="herramienta">
     <img src="../imagenes/sierra.jpg" alt="sierra">
-    <h4>sierra</h4>
+    <h4>Sierras</h4>
   </a>
 </div>
 
