--- a/categorias/manuales.html
+++ b/categorias/manuales.html
@@ -132,6 +132,10 @@ a.volver {
     <img src="../imagenes/tenazas.jpg" alt="Tenaza">
     <h4>Tenaza</h4>
   </a>
+  <a href="../herramientas/alicates.html" class="herramienta">
+    <img src="../imagenes/alicates.jpg" alt="Alicate">
+    <h4>Alicate</h4>
+  </a>
   <a href="../herramientas/formones.html" class="herramienta">
     <img src="../imagenes/formon.jpg" alt="Formón">
     <h4>Formón</h4>
