--- a/categorias/manuales.html
+++ b/categorias/manuales.html
@@ -136,6 +136,10 @@ a.volver {
     <img src="../imagenes/alicates.jpg" alt="Alicate">
     <h4>Alicate</h4>
   </a>
+  <a href="../herramientas/cinceles.html" class="herramienta">
+    <img src="../imagenes/cincel.jpg" alt="Cincel">
+    <h4>Cinceles</h4>
+  </a>
   <a href="../herramientas/formones.html" class="herramienta">
     <img src="../imagenes/formon.jpg" alt="Formón">
     <h4>Formón</h4>
