--- a/index.html
+++ b/index.html
@@ -218,6 +218,30 @@
     </div>
   </section>
 
+  <!-- Sección de contacto -->
+<section class="contacto">
+  <h2>Contáctanos</h2>
+  <p>¿Tienes dudas o quieres hacer un pedido? Escríbenos o visítanos.</p>
+
+  <a href="https://chat.whatsapp.com/tu-grupo-ficticio" target="_blank" class="btn-whatsapp">
+    💬📱 Unirse al grupo de WhatsApp
+  </a>
+
+  <div class="ubicacion">
+    <h2>Ubicación</h2>
+    <p>📍Calle Ficticia 123, Col. Centro, Jalisco</p>
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.2412939497944!2d-99.13954428511647!3d19.4370872868845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f92b067b5895%3A0x6c6b5866eb3a52e1!2sCentro%20Hist%C3%B3rico%2C%20Ciudad%20de%20M%C3%A9xico!5e0!3m2!1ses!2smx!4v1590683945064!5m2!1ses!2smx" 
+      width="100%" 
+      height="250" 
+      frameborder="0" 
+      style="border:0; border-radius: 8px; margin-top: 1rem;" 
+      allowfullscreen="" 
+      loading="lazy">
+    </iframe>
+  </div>
+</section>
+
   <footer class="footer-animado">
     <div class="fondo-letras" id="letras-footer"></div>
     <p>&copy; 2025 Ferretería Central</p>
@@ -227,5 +251,6 @@
   </footer>
 
   <script src="script.js"></script>
+
 </body>
 </html>
