--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   <h2>Contáctanos</h2>
   <p>¿Tienes dudas o quieres hacer un pedido? Escríbenos o visítanos.</p>
 
-  <a href="https://chat.whatsapp.com/tu-grupo-ficticio" target="_blank" class="btn-whatsapp">
+  <a href="https://chat.whatsapp.com/HLkrHethZr2Gfl36mMct5L" target="_blank" class="btn-whatsapp">
     💬📱 Unirse al grupo de WhatsApp
   </a>
 
